Fix SonarCloud file duplication issue

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,6 +2,14 @@ sonar.organization=jawharmanal
 sonar.projectKey=jawharmanal_ci_cd_project
 sonar.projectName=CI/CD Project
 sonar.language=py
+
+# Code source uniquement (exclut les tests)
 sonar.sources=.
+sonar.exclusions=tests/**
+
+# Dossier des tests
 sonar.tests=tests
+sonar.test.inclusions=tests/**
+
+# Rapport de couverture (si tu en as un)
 sonar.python.coverage.reportPaths=coverage.xml
